--- a/css/styles.css
+++ b/css/styles.css
@@ -19,88 +19,10 @@ body {
   font-family: 'Roboto'
 }
 
-   .header-title {
-    font-family: "Raleway", sans-serif;
+
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
-
-.header-item {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-}
-
-.header-email {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-}
-
-.header-phone {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-}
-
-.hero-title {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 900; /* Black */
-}
-
-.hero-button {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
-
-.about-subtitle {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
-
-.about-subtext {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-}
-
-.whatdo-title {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
-
-.team-title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-}
-
-.team-subtitle {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-}
-
-.team-subtext {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-}
-
-.foot-title {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-}
-
-.foot-address {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-}
-
-.portfolio-button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-}
-
-.portfolio-subtitle {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-}
-
-.portfolio-subtext {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-}
-
-
