--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,168 @@
 .base {
-    background-color: rgb(56, 56, 56); 
+  background: rgb(56, 56, 56);
+  width: 1200px;
+  height: 600px;
+  top: 80px;
 }
 
-.family {
-    color: rgb(255, 255, 255);
+footer {
+  background-color: rgb(39, 38, 38);
+  width: 1200;
+  height: 252;
+  top: 2094px;
+  opacity: 1;
+
 }
-.button  {
-    color: blue;
-}
-/* я гризу  */
-footer { 
-    background-color: rgb(39, 38, 38); 
-}
+
 address {
-    color: rgb(255, 255, 255);
-}
-body {
-  font-family: 'Roboto'
+  color: rgb(255, 255, 255);
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
 .logo {
   font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
 }
+
+.headerlist {
+  font-size: 14px;
+  width: 500px;
+
+}
+
+.secheaderlist {
+  font-size: 14px;
+  width: 500px;
+}
+
+.family {
+  font-size: 44px;
+  width: 696px;
+  height: 120px;
+  font-weight: 900;
+  color: rgb(255, 255, 255);
+}
+
+.button {
+  position: absolute;
+  color: rgb(255, 255, 255);
+  background-color: blue;
+  width: 216px;
+  height: 50px;
+  top: 430px;
+  left: 692px;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  text-align: center;
+vertical-align: middle;  
+}
+ .ourt {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+/* 
+.chim {
+  position: absolute;
+  width: 366px;
+  height: 42px;
+  /* top: 966px;
+  left: 617px; */
+  /* font-weight: 700;
+  font-size: 36px; */
+  /* line-height: 100%;
+  letter-spacing: 0.03em;
+  /* text-align: center; */
+ */ */
+
+.button {
+  position: absolute;
+  color: #ffffff;
+  background-color: blue;
+  width: 216px;
+  height: 50px;
+  top: 430px;
+  left: 692px;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.uvaga h2 {
+  width: 270px;
+  height: 16px;
+  top: 774px;
+  left: 215px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0.03em;
+}
+
+.uvaga p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+}
+/* 
+.chim {
+  width: 366px;
+  height: 42px;
+  top: 966px;
+  left: 617px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  letter-spacing: 3%;
+  text-align: center;
+} */
+
+/* .img  {
+    width: 370px;
+    height: 294px;
+    top: 1058px;
+    left: 215px;
+    
+} */
+
+/* .container {
+ 
+  border: solid black; 
+  padding: 10px;        
+  margin: 10px;           
+  border-radius: 15px;
+}  */
+
+/* 
+.ourt {
+   font-weight: 700;
+   size: 36px;
+   line-height: 100%;
+   letter-spacing: 3%;
+   align-content: center;
+}
+
+ */
+
+ .container {
+    width: 1200px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border: solid red;
+} 
