--- a/css/reset.css
+++ b/css/reset.css
@@ -1,34 +1,13 @@
-
-
-
-
-ul, ol {
-  list-style: none;
+h1, h2, h3, p {
+    margin: 0;
 }
 
-
-
-
-
-input, button, textarea, select {
-  font: inherit;
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-
-
-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-:focus {
-  outline: 2px solid #005fcc;
-  outline-offset: 2px;
-}
-
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+a {
+    text-decoration: 0;
 }
