--- a/css/styles.css
+++ b/css/styles.css
@@ -148,9 +148,11 @@ body {
 }
 
 .section2-chim {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
+  font-weight: 700;
+  font-size: 36px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #212121;
 }
 
 .section3 {
@@ -224,5 +226,5 @@ body {
   font-size: 14px;
   line-height: 171%;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: #FFFFFF;
 }
