--- a/css/page2.css
+++ b/css/page2.css
@@ -1,17 +1,24 @@
 body {
- font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
 
 .header-logo {
   font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+}
 
-  }
-  
-  .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-} 
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
