--- a/css/styles.css
+++ b/css/styles.css
@@ -30,13 +30,12 @@ body {
   margin-left: 93px;
 }
 
-
 .header-list {
   display: flex;
   flex-direction: row;
   gap: 50px;
-  margin-left: 93px;
-  margin-right: 344px;
+
+  margin-right: auto;
 }
 
 .topnav {
@@ -45,6 +44,8 @@ body {
   gap: 50px;
   align-items: center;
   margin-right: auto;
+  margin-left: 93px;
+  width: 100%;
 }
 
 .header-contacts {
@@ -57,9 +58,6 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
-  padding-right: 215px;
-  padding-bottom: 25px;
-  padding-top: 24px;
 }
 
 .header-a {
@@ -82,7 +80,7 @@ body {
 }
 
 .header-tel {
-  font-weight: 500;
+  font-weight: 500px;
   font-size: 14px;
   letter-spacing: 0.02em;
   color: #757575;
@@ -115,6 +113,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   color: #fff;
+  max-width: 696px;
 }
 
 .main-button {
@@ -135,6 +134,12 @@ body {
 .Uvahasec {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.Uvaga {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
 }
 
 .Uvaga-h2 {
@@ -185,6 +190,7 @@ body {
   text-align: center;
   color: #212121;
   margin-bottom: 50px;
+  max-width: 366%;
 }
 
 .section2-chimf {
@@ -223,6 +229,10 @@ body {
   color: #212121;
 }
 
+.section3-li {
+  padding-bottom: 94px;
+}
+
 .section3-h3 {
   font-weight: 500;
   font-size: 16px;
@@ -247,7 +257,6 @@ body {
   background-color: #ffffff;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   text-align: center;
-  margin-bottom: 94px;
 }
 
 .footer {
