--- a/css/page2.css
+++ b/css/page2.css
@@ -1,16 +1,18 @@
 body {
-  font-family: "Roboto" , sans-serif;
+  font-family: "Roboto";
 }
+
+
 
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
 }
 
-.header-logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
 }
 
 .header-logo {
@@ -18,7 +20,17 @@ body {
   font-weight: 700;
   font-size: 26px;
   letter-spacing: 0.03em;
-  color: #2196f3;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  gap: 93px;
+}
+
+.header-list {
+  display: flex;
+  gap: 50px;
 }
 
 .header-a {
@@ -32,49 +44,83 @@ body {
   color: #2196f3;
 }
 
+.header-mailto,
 .header-tel {
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  color: #757575;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    line-height: 1;
+    color: #757575;
+    text-decoration: none;
 }
 
-.header-mailto {
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  color: #757575;
+.header-mailto:hover,
+.header-tel:hover {
+    color: #2196F3; 
 }
+
 
 .main {
   padding-top: 94px;
-  padding-bottom: 50px;
+  padding-bottom: 34px;
 }
 
-.main-a {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 162%;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: #212121;
+.main-list {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
 }
+
+.main-btn {
+    padding: 6px 22px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    letter-spacing: 0.03em;
+    border: none;
+    background: #F5F4FA;
+    border-radius: 4px;
+    color: #212121;
+    cursor: pointer;
+}
+
+.main-btn:hover,
+.main-btn:focus {
+    background: #2196F3;
+    color: #fff;
+}
+
+
 
 .main-a:hover {
-  color: #2196f3;
+  color: #2196f3; 
 }
 
-.portfolio {
-  padding-top: 34px;
-  padding-bottom: 94px;
+
+.information {
+  padding-bottom: 114px;
 }
 
-.main-img {
-  width: 370px;
-  height: 294px;
+.info {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 34px;
 }
 
-.main-h2 {
+.info-li {
+  width: 370px; 
+}
+
+.info-img {
+  width: 100%;
+  height: auto;
+}
+
+.info-box {
+  padding: 20px 24px 24px 20px;
+}
+
+.info-h2 {
   font-weight: 700;
   font-size: 18px;
   line-height: 200%;
@@ -82,7 +128,7 @@ body {
   color: #212121;
 }
 
-.main-p {
+.info-p {
   font-weight: 400;
   font-size: 16px;
   line-height: 187%;
@@ -90,12 +136,6 @@ body {
   color: #757575;
 }
 
-.footer-logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  letter-spacing: 0.03em;
-}
 
 .footer {
   background: #2f303a;
@@ -103,15 +143,31 @@ body {
   padding-bottom: 60px;
 }
 
-.footer-info {
+.footer-logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+  margin-bottom: 20px;
+}
+
+.footer-location {
   font-weight: 400;
   font-size: 14px;
   line-height: 171%;
   letter-spacing: 0.03em;
   color: #fff;
+  margin-bottom: 9px;
 }
 
-.footer-mailto {
+.hotline {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+
+.footer-page {
   font-weight: 400;
   font-size: 14px;
   line-height: 171%;
@@ -119,18 +175,10 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-tel {
-  font-weight: 400px;
-  font-size: 14px;
-  line-height: 171%;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
 
 .container {
   width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
