--- a/css/page2.css
+++ b/css/page2.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Roboto", sans-serif;
   color: #212121;
@@ -10,8 +9,6 @@ body {
   margin: 0 auto;
   padding-inline: 15px;
 }
-
-
 
 .header {
   padding-top: 24px;
@@ -25,14 +22,12 @@ body {
   justify-content: space-between;
 }
 
-
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   letter-spacing: 0.03em;
 }
-
 
 .header-nav {
   display: flex;
@@ -71,8 +66,6 @@ body {
   color: #2196f3;
 }
 
-
-
 .main {
   padding-top: 94px;
   padding-bottom: 50px;
@@ -104,53 +97,61 @@ body {
   color: #ffffff;
 }
 
-
-
 .information {
   padding-bottom: 114px;
 }
 
 .info {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   gap: 30px;
+  list-style: none;
+  justify-content: center;
+  align-content: flex-end;
+  
 }
 
 .info-li {
   background: #ffffff;
   border: 1px solid #eeeeee;
-  transition: 0.2s;
-}
 
-.info-li:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 4px 8px rgba(0,0,0,0.12);
+  flex-basis: calc((100% - 8  * 30px) / 9); 
 }
 
 .info-img {
-  width: 100%;
-  display: block;
+ 
 }
+
+
+.info-li:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.12);
+}
+
+
 
 .info-box {
-  padding: 20px 24px;
+ 
 }
-
 
 .info-h2 {
   font-size: 18px;
   font-weight: 700;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
+  margin-top: 20px;
+  margin-left: 24px;
+  line-height: 34px;
 }
-
 
 .info-p {
   font-size: 16px;
   color: #757575;
+  margin-bottom: 20px;
+  margin-left: 24px;
+  line-height: 34px;
+  
 }
-
-
 
 .footer {
   background-color: #2f303a;
