--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
   background: #2f303a;
+  background-image: url(./fon.png);
 }
 
 .main-h1 {
