--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ body {
 .header-nav {
   display: flex;
   flex-direction: row;
-
   align-items: center;
   margin-right: auto;
   margin-left: 93px;
@@ -105,6 +104,7 @@ body {
   padding-bottom: 200px;
   background: #2f303a;
   background-image: url(./fon.png);
+  background: linear-gradient( rgba(47, 48, 58, 0.4);)
 }
 
 .main-h1 {
@@ -317,6 +317,7 @@ body {
   background-color: #ffffff;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   text-align: center;
+  border: 2px solid red;
 }
 
 .footer {
