--- a/css/styles.css
+++ b/css/styles.css
@@ -103,8 +103,11 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
   background: #2f303a;
-  background-image: url(./fon.png);
-  background: linear-gradient( rgba(47, 48, 58, 0.4);)
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("./fon.png");
 }
 
 .main-h1 {
