--- a/css/reset.css
+++ b/css/reset.css
@@ -1,17 +1,26 @@
-h1, h2, h3, p {
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
 
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: 0;
+  text-decoration: 0;
 }
 
 button {
-    border: 0px;
+  border: 0px;
 }
